--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Okoye Emmanuel Obiajulu",
   "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
